--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Buckland - Architecte de l'information</title>
+    <title> Michael Buckland - Architecte de l'information</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>Michael Buckland</h1>
+        <h1>Buckland</h1>
         <nav>
             <a class="nav-button" href="#accueil">Accueil</a>
             <a class="nav-button" href="#biographie">Biographie</a>
