--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Buckland</h1>
+        <h1>Michael Buckland</h1>
         <nav>
             <a class="nav-button" href="#accueil">Accueil</a>
             <a class="nav-button" href="#biographie">Biographie</a>
